--- a/data/sections.yml
+++ b/data/sections.yml
@@ -1,4 +1,3 @@
----
 - "About Us":
     subtitle: "Reach Hearts is Building Community"
     body: "<p>At Reach Hearts, we believe in the power of big data and the strength of new media, and we leverage both to help nonprofits reach more people. The idea for Reach Hearts came from noticing that non-profits were having difficulty navigating the New Media landscape and figuring out how best to leverage Big Data. This is a chance to give back, make a difference, and motivate others to join in.</p><p>At Reach Hearts, we believe in the power of big data and the strength of new media, and we leverage both to help nonprofits reach more people. The idea for Reach Hearts came from noticing that non-profits were having difficulty navigating the New Media landscape and figuring out how best to leverage Big Data. This is a chance to give back, make a difference, and motivate others to join in.</p>"
@@ -10,4 +9,4 @@
 - "Big Data":
     subtitle: "There's power in Numbers"
     body: "<p>Make meaningful and measurable connections to the nonprofit sector with Reach Hearts</p><p>Along with giving your business positive free press and the free promotion associated with good PR, working with Reach Hearts will also make you feel good, know- ing that you are donating your time and expertise to a good cause.</p><p>We know that at times half the battle of offering pro bono services is finding that right nonprofit to work with. And when you are already donating time, who wants to waste time finding the right place to donate? Join Reach Hearts and let us match you up with a non- profit that has big data needs and then we will match you up to one of our new media connections to round out the promotional opportunities for the nonprofits that come through our door.</p>"
-    image:
+    image: "/samples/pages/big-data-icon.svg"
