--- a/app/content_types/sections.yml
+++ b/app/content_types/sections.yml
@@ -1,66 +1,33 @@
-# Human readable name of this type
 name: Content Section
-
-# Lowercase, underscored handle used to access this type
 slug: sections
-
-# Explanatory text displayed in the back-office
 description: Content sections for the home page
-
-# Slug of field used to identify entries by default, such as the title
 label_field_name: title
-
-# Valid values: manually, created_at, updated_at, or the slug of any field
 order_by: manually
-
-# Valid values: asc (ascending) and desc (descending). Set to asc by default.
-# order_direction: asc
-
-# Specify a field slug to group entries by that field in the back-office.
-# group_by: <your field>
-
-# Activate public 'create' API (e.g for a contact form)
-# public_submission_enabled: false
-
-# Array of emails to be notified of new entries made with the public API
-# public_submission_accounts: ['john@example.com']
-
-# Control the display of the content type in the back-office.
-# display_settings:
-#   seo: false              # display the SEO tab for the content entries
-#   advanced: false         # display the Advanced tab for the content entries
-#   position: 1             # position in the sidebar menu
-#   hidden: false           # hidden for authors?
-
-# By default, the back-office displays the _label property (see label_field_name) of the content entry. This can be modified by writing your own Liquid template below:
-# entry_template: '<a href="{{ link }}">{{ entry._label }}</a>' # The default template
-
-# A list describing each field
 fields:
-- title: # The lowercase, underscored name of the field
-    label: Title # Human readable name of the field
+- title:
+    label: Title
     type: string
     required: true
     hint: First bigger section line
     localized: false
 
-- subtitle: # The lowercase, underscored name of the field
-    label: Subtitle # Human readable name of the field
+- subtitle:
+    label: Subtitle
     type: string
     required: false
     hint: Second smaller section line
     localized: false
 
-- body: # The lowercase, underscored name of the field
-    label: Body # Human readable name of the field
+- body:
+    label: Body
     type: text
     required: false
     hint: Body that appears next to the image
     localized: false
-    # text_formatting: html # html (uses rich text editor), markdown or text (uses plain text editor)
+    text_formatting: text
 
-- image: # The lowercase, underscored name of the field
-    label: Image # Human readable name of the field
+- image:
+    label: Image
     type: file
     required: false
     hint: Image next to the body text, fades in.
